--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode/
 
 # Godot-specific ignores
 .import/
@@ -7,3 +8,9 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+bin/
+
+addons/
+gut/
+scripts/
